--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </section>
 
     <section id="disciplines">
-      <h1 class="select-animate">Mit Kompetenz. Mit Mut.</h1>
+      <h1 class="select-animate">Mit Kompetenz. Mit Mut. Mit Biss.</h1>
       <h3><em> Unsere Expertise: </em></h3>
 
       <div class="cards">
