--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <section id="contact">
       <!-- <h2 class="logo select-animate">Shalumov & Partner</h2> -->
       <div class="logo select-animate">
-        <img src="./assets/logo.png" style="margin: 1rem 0" alt="" srcset="" />
+        <img src="./assets/logo2.png" style="margin: 1rem 0" alt="" srcset="" />
       </div>
       <div class="contact-grid">
         <div class="contact-phone">
